2004-09-25  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade:

	Added a "Online Information at" menu item in the popup
	menu of a book.
	  
	* lib/alexandria/ui/main_app.rb:

	- Fills the "Online Information at" menu item ;
	- Fixed a bug when sorting by rating books that aren't rated yet ;
	- Refactored a bit.

	* lib/alexandria/book.rb:

	Set the default rating to 0 instead of 3.

	* lib/alexandria/book_providers/bn.rb:

	Added.

	* lib/alexandria/book_providers.rb:

	- Includes the BN provider.
	- Moved the HTTP proxy code there;
	- Introduced GenericProvider#fullname. 

	* lib/alexandria/book_providers/amazon.rb:

	- Removed the GLib.convert call, that seems unnecessary ;
	- Follow changes in book_provider.rb.

	* lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/ui/preferences_dialog.rb: 

	Follow changes in book_provider.rb.

	* schemas/alexandria.schemas:

	Added BN in the providers_priority variable.

2004-09-24  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade:

	Added Library/Import and Library/Export.

	* lib/alexandria/ui/export_dialog.rb:

	Added.

	* lib/alexandria/book.rb:

	Removed unnecessary require statements.

	* lib/alexandria/library.rb:

	Added code for the compressed XML export.	

	* lib/alexandria/ui.rb,
	  lib/alexandria/ui/main_app.rb:

	Follows Alexandria::ExportDialog.

2004-08-17  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb,
	  schemas/alexandria.schemas:

	Remember if Alexandria was maximized or not, by saving that state
	in the /apps/alexandria/maximized GConf variable (#765).

2004-08-04  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Do not try to add the book if the add button is disabled ;
	- Grab the focus on the ISBN entry at the beginning (#760) ;
	- Autoselect the criterion when the user clicks on an insensitive
	  widget (#761).
