@@ -19,15 +19,15 @@ require 'gdk_pixbuf2'
 require 'libglade2'
 require 'gnome2'
 
-require 'alexandria/ui/icons.rb'
-require 'alexandria/ui/glade_base.rb'
-require 'alexandria/ui/alert_dialog.rb'
-require 'alexandria/ui/about_dialog.rb'
-require 'alexandria/ui/info_book_dialog.rb'
-require 'alexandria/ui/new_book_dialog.rb'
-require 'alexandria/ui/preferences_dialog.rb'
-require 'alexandria/ui/export_dialog.rb'
-require 'alexandria/ui/main_app.rb'
+require 'alexandria/ui/icons'
+require 'alexandria/ui/glade_base'
+require 'alexandria/ui/alert_dialog'
+require 'alexandria/ui/about_dialog'
+require 'alexandria/ui/info_book_dialog'
+require 'alexandria/ui/new_book_dialog'
+require 'alexandria/ui/preferences_dialog'
+require 'alexandria/ui/export_dialog'
+require 'alexandria/ui/main_app'
 
 module Alexandria
 module UI
